# facetrack-crm

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/validation/: README.md
data/validation/ffhq_wrinkle/: ffhq_manual_ids_urls.csv  stream_extract_ffhq.py
data/validation/scin/: sample_download_scin.py  scin_sample_manifest.csv
docs/: BUILD_NOTES.md  CAPTURE_STABILITY_RESEARCH.md  DEMO_STORYBOARD.md  DEMO_STORYBOARD_EN.md  LIMITATIONS.md  NATIVE_AR_CAPTURE_EVALUATION.md  PRD.md  PROGRESS.md  SUBMISSION_EMAIL.md  TDD.md  VALIDATION.md
docs/superpowers/plans/: 2026-07-04-validation-retune-and-benchmark-tests.md  (+1 more)
scripts/: benchmark.py  build_docs_pdf.sh  capture_app.py  capture_history.py  capture_intake.py  generate_demo_photos.py  process_assets.py  render_pitch_assets.py  reproducibility_evidence.py
scripts/validation/: validate_severity_acne04.py  validate_skintone_bias_scin.py  validate_wrinkle_ffhq.py
src/facetrack/: __init__.py  config.py  consistency_gate.py  cv_pipeline.py  db.py  ghost_photos.py  llm_explainer.py  patient_service.py  score_display.py  scoring.py  seed.py  visualization.py
tests/: conftest.py  test_app_imports.py  test_capture_config.py  test_capture_logic.py  test_consistency_gate.py  test_face_capture_wrapper.py  test_ghost_photos.py  test_llm_explainer.py  test_patient_service.py  test_pipeline_scale.py  test_score_display.py  test_scoring_determinism.py  test_scoring_robustness.py  test_validation_benchmarks.py  test_visualization.py
(+10 files in other folders)
