[project]
name = "facetrack-crm"
version = "0.1.0"
description = "AI-native CRM and clinical support system for Taiwan beauty clinics, with photo-consistency-gated quantitative skin analysis and longitudinal tracking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.102.0",
    "google-genai>=2.4.0",
    "loguru>=0.7.3",
    "mediapipe>=0.10.35",
    "numpy>=2.4.5",
    "opencv-python-headless>=4.13.0.92",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "plotly>=6.7.0",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
    "streamlit>=1.57.0",
]

[dependency-groups]
dev = [
    "matplotlib>=3.10.9",
    "playwright>=1.60.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/facetrack"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
